applications/site/site-helm/templates/site-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
spec:
  #type: NodePort
  selector:
    app: site
  ports:
  - port: 80
    targetPort: 80
